--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan Gallo</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <h1>Ryan Gallo</h1>
     <p>I hope this works </p>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
