--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style="background-color: rgb(0,163,224);">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
+    <meta property="og:title" content="Ryan Gallo's">
+  <script>
+    "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
+  </script> <!---->
     <title>Ryan Gallo</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
