--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="Ryan Gallo's">
+    <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf">
   <script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
   </script> <!---->
     <title>Ryan Gallo</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
