--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
   </script> <!---->
     <title>Ryan Gallo</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
 </head>
 <body>
-
+  <div class="center-box">
+    <!-- Content of the rectangular box goes here -->
+    <h1>Ryan Gallo</h1>
+</div>
     <!-- Bootstrap JS and Popper.js -->
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
