--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" >
 </head>
 <body>
-  <div class="center-box">
-    <!-- Content of the rectangular box goes here -->
-    <h1>Ryan Gallo</h1>
+  <div class="container">
+    <div class="center-box">
+      <!-- Content of the rectangular box goes here -->
+      <h1>Ryan Gallo</h1>
+  </div>
 </div>
     <!-- Bootstrap JS and Popper.js -->
     <script src="js/popper.min.js"></script>
