--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <button class="customButton">
         <svg viewBox="0 0 12 12" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" class="customIcon">
             <!-- Transparent background rectangle -->
-            <rect x="" y="" width="10" height="10" style="fill:none"></rect>
+            <rect x="0" y="0" width="10" height="10" style="fill:none"></rect>
             
             <!-- Circle with white stroke -->
             <circle cx="8.5" cy="7" r="4" style="fill:none;stroke:#111;stroke-width:2.29px" transform="matrix(.875 0 0 .875 4.563 -.625)"></circle>
