--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="Ryan Gallo's">
     <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf">
-  <!--<script>
+ <script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
-  </script> -->
+  </script> 
     <title>Ryan Gallo</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" >
