--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="center-box">
-      <img src="image.jpg" class="overlay-image">
+      <img src="image.JPG" class="overlay-image">
       <div class="textColor">
         <h1>Ryan Gallo</h1>
         <h6>(he/him/his)</h6>
