--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="Ryan Gallo's">
     <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf">
- <script>
+  <!--<script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
-  </script> 
+  </script> -->
     <title>Ryan Gallo</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" >
 </head>
 <body>
     <div class="center-box">
-      <img src="image.jpg" class="overlay-image">
+      <img src="image.JPG" class="overlay-image">
       <div class="textColor">
         <h1>Ryan Gallo</h1>
         <h6>(he/him/his)</h6>
@@ -44,7 +45,6 @@
     
     </div>
     <!-- Bootstrap JS and Popper.js -->
-    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
