--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="Ryan Gallo's">
-    <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf">
+    <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf" />
   <script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
   </script>
