--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="Ryan Gallo's">
-    <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf">
+    <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf" />
   <!--<script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
   </script> -->
     <title>Ryan Gallo</title>
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
 </head>
 <body>
     <div class="center-box">
