--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h6>(he/him/his)</h6>
         <h4>Electrical Engineer</h4>
         <h5>Process Engineer Intern | Vishay</h5>
-        <h6> Omaha, NE</h6> 
+        <h6> Omaha, Ne</h6> 
       </div>
       <a href="Ryan Gallo.vcf" download class="customLink">
         <button class="customButton">
