--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="robots" content="noindex, nofollow">
     <meta property="og:title" content="Ryan Gallo's">
     <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf" />
-  <script>
+  <!--<script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
-  </script>
+  </script>-->
     <title>Ryan Gallo</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="styles.css" />
@@ -40,7 +40,7 @@
     <div class="button-container">
       <!-- Mobile Phone-->
       <div class="button button1">
-      <a href="#" class="customLink">
+      <a href="tel:4029194500" class="customLink">
         <button class="customButton">
           <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg" class="customIcon2" xml:space="preserve"
           style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2">
@@ -56,7 +56,7 @@
     </div>
       <!--Email-->
       <div class="button button2">
-        <a href="#" class="customLink">
+        <a href="mailto:ryan@rgallo.me" class="customLink">
           <button class="customButton">
             <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" class="customIcon2"
               style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2">
@@ -73,7 +73,7 @@
       </div>
       <!--Signal-->
       <div class="button button3">
-      <a href="#" class="customLink">
+      <a href="https://signal.me/#p/4029194500" class="customLink">
         <button class="customButton">
           <svg viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg" xml:space="preserve" class="customIcon2"
           style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:2">
@@ -92,7 +92,7 @@
       </div>
       <!--Resume-->
       <div class="button button4">
-      <a href="#" class="customLink">
+      <a href="/resume/index.html" class="customLink">
         <button class="customButton">
           <svg xmlns="http://www.w3.org/2000/svg" class="customIcon2"
               fill-rule="evenodd" clip-rule="evenodd" viewBox="0 0 16 16">
