--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex, nofollow">
-    <meta property="og:title" content="Ryan Gallo's">
+    <meta property="og:title" content="Ryan Gallo's Business Card and Resume">
     <link rel="stylesheet" type="text/css" href="Fonts/SourceSans3-Regular.ttf" />
   <!--<script>
     "http" == window.location.href.substr(0, 4) && "/" != window.location.href.slice(-1) && window.location.replace(window.location.href + "/");
@@ -16,6 +16,7 @@
 </head>
 <body>
     <div class="center-box">
+      <div class = "left-content"> 
       <img src="image.JPG" class="overlay-image">
       <div class="textColor">
         <h1>Ryan Gallo</h1>
@@ -36,7 +37,9 @@
         Save Contact
       </button>
     </a>
+  </div>
     <!-- Container for 4 anchor buttons -->
+    <div class = "right-content">
     <div class="button-container">
       <!-- Mobile Phone-->
       <div class="button button1">
@@ -105,6 +108,7 @@
       </div>
     </div>
     </div>
+  </div>
     <!-- Bootstrap JS and Popper.js -->
     <script src="js/bootstrap.min.js"></script>
 </body>
