--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         Save Contact
       </button>
     </a>
+    <a href="https://ryangallo.me/" class="anchor1"><strong> ePortfolio</strong></a>
   </div>
     <!-- Container for 4 anchor buttons -->
     <div class = "right-content">
